--- a/BioCro/DARPA/biocro_temp_exps.Rmd
+++ b/BioCro/DARPA/biocro_temp_exps.Rmd
@@ -15,9 +15,10 @@ Biomass for these two treatments are estimated using BioCro version 0.95.
 
 2. Create a new folder called `biocro_temp_exps_files1`. 
 
-3. Create new XML called `pecan.biocro.darpa.temp.exps1.xml`
+3. Create new PEcAn Settings file called `pecan.biocro.darpa.temp.exps1.xml`. 
+To learn more about the pecan settings file, see the  [PEcAn Documentation](https://pecanproject.github.io/pecan-documentation/master/pecanXML.html#)
 
-```{r, eval=FALSE}
+```xml
 <pecan>
   <outdir>biocro_temp_exps_results1</outdir>
 
@@ -60,7 +61,7 @@ Biomass for these two treatments are estimated using BioCro version 0.95.
 
   <model>
     <type>BIOCRO</type>
-    <binary>/home/kristinariemer/pecan/models/biocro/inst/biocro.Rscript</binary>
+    <binary>~/pecan/models/biocro/inst/biocro.Rscript</binary>
     <revision>0.95</revision>
   </model>
 
@@ -71,7 +72,7 @@ Biomass for these two treatments are estimated using BioCro version 0.95.
     <inputs>
       <met>
         <output>BIOCRO</output>
-        <path>/home/kristinariemer/biocro_temp_exps_files1/danforth-control-chamber</path>
+        <path>~/biocro_temp_exps_files1/danforth-control-chamber</path>
       </met>
     </inputs>
       <start.date>2019/01/01</start.date>
@@ -83,9 +84,9 @@ Biomass for these two treatments are estimated using BioCro version 0.95.
 </pecan>
 ```
 
-4. Create Setaria constants file `setaria.constants.xml`. This has biomass coefficients and starting biomass values. The same will be used for all runs. 
+4. Create Setaria constants file `setaria.constants.xml`. This has biomass coefficients and starting biomass values. The same will be used for all runs. These parameters are defined in the `BioCro::BioGro` function documentation.
 
-```{r, eval=FALSE}
+```xml
 <constants>
   <type>
     <photosynthesis>C4</photosynthesis>
@@ -284,7 +285,7 @@ write.csv(trait, "biocro_temp_exps_results1/pft/SetariaWT_ME034/trait.data.csv")
 load("biocro_temp_exps_results1/pft/SetariaWT_ME034/trait.data.Rdata")
 file.remove("biocro_temp_exps_results1/pft/SetariaWT_ME034/trait.data.Rdata")
 trait.data$Vcmax <- trait.data$Vcmax[4:15,]
-save(trait.data, file = "/home/kristinariemer/biocro_temp_exps_results1/pft/SetariaWT_ME034/trait.data.Rdata")
+save(trait.data, file = "~/biocro_temp_exps_results1/pft/SetariaWT_ME034/trait.data.Rdata")
 
 # Run the PEcAn meta.analysis
 if(!is.null(settings$meta.analysis)) {
@@ -397,7 +398,7 @@ controlchamber_weather <- data.frame(year = rep(2019, 8760),
                                       WS = rep(0, times = 365 * 24), 
                                       precip = rep(c(0.000462963, rep(0, 23)), 365))
 
-write.csv(controlchamber_weather, "biocro_temp_exps_files1/danforth-control-chamber.2019.csv", 
+write.csv(controlchamber_weather, "~/biocro_temp_exps_files1/danforth-control-chamber.2019.csv", 
           row.names = FALSE)
 ```
 
@@ -520,7 +521,7 @@ ggplot(data = daily_biomass) +
 
   <model>
     <type>BIOCRO</type>
-    <binary>/home/kristinariemer/pecan/models/biocro/inst/biocro.Rscript</binary>
+    <binary>~/pecan/models/biocro/inst/biocro.Rscript</binary>
     <revision>0.95</revision>
   </model>
 
@@ -531,7 +532,7 @@ ggplot(data = daily_biomass) +
     <inputs>
       <met>
         <output>BIOCRO</output>
-        <path>/home/kristinariemer/biocro_temp_exps_files2/danforth-highnight-chamber</path>
+        <path>~/biocro_temp_exps_files2/danforth-highnight-chamber</path>
       </met>
     </inputs>
       <start.date>2019/01/01</start.date>
@@ -744,7 +745,7 @@ write.csv(trait, "biocro_temp_exps_results2/pft/SetariaWT_ME034/trait.data.csv")
 load("biocro_temp_exps_results2/pft/SetariaWT_ME034/trait.data.Rdata")
 file.remove("biocro_temp_exps_results2/pft/SetariaWT_ME034/trait.data.Rdata")
 trait.data$Vcmax <- trait.data$Vcmax[4:15,]
-save(trait.data, file = "/home/kristinariemer/biocro_temp_exps_results2/pft/SetariaWT_ME034/trait.data.Rdata")
+save(trait.data, file = "~/biocro_temp_exps_results2/pft/SetariaWT_ME034/trait.data.Rdata")
 
 # Run the PEcAn meta.analysis
 if(!is.null(settings$meta.analysis)) {
@@ -961,7 +962,7 @@ ggplot(data = daily_biomass) +
 
   <model>
     <type>BIOCRO</type>
-    <binary>/home/kristinariemer/pecan/models/biocro/inst/biocro.Rscript</binary>
+    <binary>~/pecan/models/biocro/inst/biocro.Rscript</binary>
     <revision>0.95</revision>
   </model>
 
@@ -972,7 +973,7 @@ ggplot(data = daily_biomass) +
     <inputs>
       <met>
         <output>BIOCRO</output>
-        <path>/home/kristinariemer/biocro_temp_exps_files3/danforth-highnight-chamber</path>
+        <path>~/biocro_temp_exps_files3/danforth-highnight-chamber</path>
       </met>
     </inputs>
       <start.date>2019/01/01</start.date>
@@ -1185,7 +1186,7 @@ write.csv(trait, "biocro_temp_exps_results3/pft/SetariaWT_ME034/trait.data.csv")
 load("biocro_temp_exps_results3/pft/SetariaWT_ME034/trait.data.Rdata")
 file.remove("biocro_temp_exps_results3/pft/SetariaWT_ME034/trait.data.Rdata")
 trait.data$Vcmax <- trait.data$Vcmax[4:15,]
-save(trait.data, file = "/home/kristinariemer/biocro_temp_exps_results3/pft/SetariaWT_ME034/trait.data.Rdata")
+save(trait.data, file = "~/biocro_temp_exps_results3/pft/SetariaWT_ME034/trait.data.Rdata")
 
 # Run the PEcAn meta.analysis
 if(!is.null(settings$meta.analysis)) {
@@ -1202,7 +1203,7 @@ for(trait_name in names(trait.mcmc)){
     trait.mcmc[[trait_name]][[chain]][,"beta.o"] <- trait.mcmc[[trait_name]][[chain]][,"beta.o"] + trait.mcmc[[trait_name]][[chain]][,"beta.trt[2]"]
   }
 }
-save(trait.mcmc, file = "/home/kristinariemer/biocro_temp_exps_results3/pft/SetariaWT_ME034/trait.mcmc.Rdata")
+save(trait.mcmc, file = "~/biocro_temp_exps_results3/pft/SetariaWT_ME034/trait.mcmc.Rdata")
 rm(trait.mcmc)
 
 # Write model specific configs
