--- a/BioCro/DARPA/biocro_1.0_darpa.Rmd
+++ b/BioCro/DARPA/biocro_1.0_darpa.Rmd
@@ -14,7 +14,7 @@ library(BioCro)
 if(!packageVersion(pkg = 'BioCro') <= 1.0){
   warning("need to use BioCro v1.0 or greater")
 } else {
-  devtools::install_github('ebimodeling/biocro-dev')
+  #devtools::install_github('ebimodeling/biocro-dev')
   #devtools::install_github('ebimodeling/biocro@new-framework')  
 }
 
