--- a/BioCro/DARPA/partitioned_biomass_data.Rmd
+++ b/BioCro/DARPA/partitioned_biomass_data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "How to Do Biomass Partitioning on DARPA Data Using BioCro Model"
+title: "How to Generate Weather and Biomass Data for Coefficient Optimization"
 author: "Kristina Riemer, University of Arizona"
 output: github_document
 urlcolor: blue
@@ -11,7 +11,7 @@ For biomass partitioning using [`OpBioGro`](https://github.com/ebimodeling/biocr
 
 Assemble weather dataframe: 
 ```{r, message=FALSE}
-OpBioGro_weather <- data.frame(year = rep(2019, 8760), 
+opt_weather <- data.frame(year = rep(2019, 8760), 
                                       doy = rep(1:365, each = 24), 
                                       hour = rep(seq(0, 23), 365), 
                                       solarR = rep(c(rep(0, each = 8), rep(936, each = 12), rep(0, each = 4)), times = 365),
@@ -20,7 +20,7 @@ OpBioGro_weather <- data.frame(year = rep(2019, 8760),
                                       WS = rep(0, times = 365 * 24), 
                                       precip = rep(c(0.000462963, rep(0, 23)), 365))
 
-write.csv(OpBioGro_weather, "biocro_opt_darpa_files/OpBioGro_weather.csv", row.names = FALSE)
+write.csv(opt_weather, "opt_inputs/opt_weather.csv", row.names = FALSE)
 ```
 
 Visualize these data: 
@@ -29,18 +29,18 @@ library(dplyr)
 library(ggplot2)
 library(lubridate)
 
-OpBioGro_weather_plot <- OpBioGro_weather %>% 
+opt_weather_plot <- opt_weather %>% 
   mutate(date = seq(as.POSIXct("2019-01-01 00:00:00"), 
                     as.POSIXct("2019-12-31 23:00:00"), 
                     by = "hour")) %>% 
   dplyr::select(solarR:date) %>% 
   tidyr::pivot_longer(cols = solarR:precip)
 
-ggplot(OpBioGro_weather_plot, aes(date, value)) +
+ggplot(opt_weather_plot, aes(date, value)) +
   geom_line(size = 0.1) + 
   facet_wrap(~name, ncol = 1, scales = 'free_y')
 
-ggplot(OpBioGro_weather_plot %>% filter(month(date) ==1 & day(date) < 3), aes(date, value)) +
+ggplot(opt_weather_plot %>% filter(month(date) ==1 & day(date) < 3), aes(date, value)) +
     geom_line() + 
     facet_wrap(~name, ncol = 1, scales = 'free_y')
 ```
@@ -94,7 +94,7 @@ ggplot(s, aes(date, value, color = name)) +
   geom_point(shape = 4)
 ```
 
-Calculated median for each plant part and harvest date and added how many days each plant was grown before harvested to the biomass dataframe. Then calculated thermal times for weather data using `BioGro`, using only the thermal times for the days of harvest. 
+Calculated median for each plant part and harvest date and added how many days each plant was grown before harvested to the biomass dataframe. Then calculated thermal times for weather data using `BioGro`, using only the thermal times for the days of harvest. Note that this uses BioCro version 0.95. 
 ```{r, message=FALSE}
 library(BioCro)
 if(packageVersion(pkg = 'BioCro') >= 1.0){
@@ -109,7 +109,7 @@ biomass_data_single <- biomass_data_all %>%
   summarise_at(vars(Stem:Grain), median) %>% 
   mutate(days_grown = as.integer(as.Date(as.character(biomas_harvested), format = "%m/%d/%Y") - as.Date(as.character(biomass_data_all$seeds_in_germination[1]), format = "%m/%d/%Y")))
 
-weather_only_run <- BioGro(OpBioGro_weather, day1 = 1, dayn = 365)
+weather_only_run <- BioGro(opt_weather, day1 = 1, dayn = 365)
 weather_only_run_df <- as.data.frame(unclass(weather_only_run)[1:11]) %>%
   select(Hour, DayofYear, ThermalT) %>% 
   filter(Hour == 0, 
@@ -121,7 +121,7 @@ Combined biomass data for stem, leaf, panicle/grain, and root from data with cor
 ```{r, message=FALSE}
 SLA_mg <- 80 / 1000000
 
-OpBioGro_biomass <- left_join(biomass_data_single, weather_only_run_df, by = "days_grown") %>% 
+opt_biomass <- left_join(biomass_data_single, weather_only_run_df, by = "days_grown") %>% 
   mutate(Rhizome = rep(0, nrow(biomass_data_single)), 
          LAI = SLA_mg * Leaf) %>%
   select(ThermalT, Stem, Leaf, Root, Rhizome, Grain, LAI) %>% 
@@ -129,25 +129,25 @@ OpBioGro_biomass <- left_join(biomass_data_single, weather_only_run_df, by = "da
   data.frame() %>% 
   slice(-6)
 
-OpBioGro_biomass1 <- OpBioGro_biomass %>% 
+opt_biomass1 <- opt_biomass %>% 
   slice(1:4) %>% 
   mutate(Stem = Stem + Grain, 
          Grain = rep(0, nrow(.)))
-OpBioGro_biomass2 <- OpBioGro_biomass %>% 
+opt_biomass2 <- opt_biomass %>% 
   slice(5) %>% 
-  mutate(Stem = Stem + OpBioGro_biomass$Grain[4], 
-         Grain = Grain - OpBioGro_biomass$Grain[4])
+  mutate(Stem = Stem + opt_biomass$Grain[4], 
+         Grain = Grain - opt_biomass$Grain[4])
 
-OpBioGro_biomass_comb <- bind_rows(OpBioGro_biomass1, OpBioGro_biomass2)
+opt_biomass_comb <- bind_rows(opt_biomass1, opt_biomass2)
 
-write.csv(OpBioGro_biomass_comb, "biocro_opt_darpa_files/OpBioGro_biomass.csv", row.names = FALSE)
+write.csv(opt_biomass_comb, "opt_inputs/opt_biomass.csv", row.names = FALSE)
 
-OpBioGro_biomass_plot <- OpBioGro_biomass_comb %>% 
+opt_biomass_plot <- opt_biomass_comb %>% 
   tidyr::pivot_longer(Stem:LAI)
-ggplot(OpBioGro_biomass_plot %>% filter(name != "LAI"), aes(x = ThermalT, y = value, color = name)) +
+ggplot(opt_biomass_plot %>% filter(name != "LAI"), aes(x = ThermalT, y = value, color = name)) +
   geom_line() +
   ylab("Dry Weight (mg)")
-ggplot(OpBioGro_biomass_plot %>% filter(name == "LAI"), aes(x = ThermalT, y = value)) +
+ggplot(opt_biomass_plot %>% filter(name == "LAI"), aes(x = ThermalT, y = value)) +
   geom_line() +
   ylab("Leaf Area Index (m2 leaf/m2 ground)")
 ```
