Save parameter files as csv instead of Rdata

--- a/BioCro/DARPA/biomass_coeffs_1.0.Rmd
+++ b/BioCro/DARPA/biomass_coeffs_1.0.Rmd
@@ -40,8 +40,8 @@ The following code uses BioCro 1.0.
 Set up the parameters for *Setaria* using these two lists, `setaria_initial_state` and `setaria_parameters`. This uses parameter values from optimizing the older version of BioCro. 
 ```{r}
 source(file = "biomass_coeffs_1.0_inputs/create_params.R")
-load("biomass_coeffs_1.0_inputs/setaria_initial_state.RData")
-load("biomass_coeffs_1.0_inputs/setaria_parameters.RData")
+setaria_initial_state <- as.list(read.csv("biomass_coeffs_1.0_inputs/setaria_initial_state.csv"))
+setaria_parameters <- as.list(read.csv("biomass_coeffs_1.0_inputs/setaria_parameters.csv"))
 ```
 
 Create the modules, which are currently developed for *Sorghum*. 
